# fp-2022-jub-fall

./: .gitignore  2x2.out  2x2.txt  CHANGELOG.md  LICENSE  Main.hs  P02.cabal  P04.cabal  P05.cabal  P06.cabal  P07.cabal  P08.cabal  P09.cabal  P10.cabal  P11.cabal  P12.cabal  README.md  bremen-haskell-hw01.cabal  consoleApp.cabal  fp-stack-proj.cabal  integration.cabal  integrationPerformance.md  newproj.cabal  package.yaml  proj.cabal  project.cabal  report.md  repository_link.md  stack.yaml  str.out
Daria Shutina, rock-paper-scissors/: README.md
analize/: Main.hs
app/: Expr.hs  Main  Main.hs
math/: CHANGELOG.md  math.cabal  package.yaml  stack.yaml
math/app/: Main.hs
math/src/: Expr.hs  Lib.hs  Parser.hs
math/test/: Test.hs
proj/: CHANGELOG.md  package.yaml  proj.cabal
proj/app/: Main.hs
proj/src/: Lambda.hs  Parser.hs  Reductions.hs
proj/test/: Test.hs
src/: Applicatives.hs  BetterPerson.hs  BinTree.hs  Combinators.hs  Constants.hs  CustomPerson.hs  Expr.hs  Force.hs  Functors.hs  GoodPerson.hs  Gui.hs  Human.hs  ImprovedPerson.hs  Infix.hs  Integration.hs  Lambda.hs  Lazy.hs  Lexer.hs  Lib.hs  List.hs  Main.hs  Minesweeper.hs  MyEq.hs  MyPerson.hs  NewPerson.hs  NextLevelPerson.hs  Parse.hs  Parser.hs  Password.hs  Person.hs  Person1.hs  Person2.hs  PersonFixed.hs  PersonGood.hs  PersonImproved.hs  PersonNew.hs  PersonRedesign.hs  PersonUpdated.hs  Pet.hs  PixelIt.hs  (+11 more)
src/Expr/: AST.hs  Combinators.hs  GADT.hs  Infix.hs  Lexer.hs  Parser.hs  Prefix.hs
test/: Test.hs
test/Test/: BetterPerson.hs  BinTree.hs  CustomPerson.hs  Expr.hs  GoodPerson.hs  Human.hs  ImprovedPerson.hs  Integration.hs  Lambda.hs  LibTest.hs  List.hs  MinesweeperTest.hs  MyPerson.hs  NewPerson.hs  NextLevelPerson.hs  PB_tests.hs  Parse.hs  ParsePB.hs  Parser.hs  Parser_pb.hs  Person.hs  Person1.hs  Person2.hs  PersonFixed.hs  PersonGood.hs  PersonImproved.hs  PersonNew.hs  PersonRedesign.hs  PersonUpdated.hs  Pet.hs  PixelIt.hs  PropertyBasedTests.hs  Reductions.hs  ReductionsPB.hs  Reductions_pb.hs  Shape.hs  SortedList.hs  TempPerson.hs  Terms.hs  Unit.hs  (+1 more)
(+9 files in other folders)
