cabal-version:      2.4
name:               newproj
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         levalyadov86@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable newproj
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, JuicyPixels==3.3.7, JuicyPixels-repa==0.7.1.0, vector == 0.12.3.1, bytestring==0.11.3.1, hip==1.5.6.0, split==0.2.3.5
    hs-source-dirs:   app
    default-language: Haskell2010
